--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
   "devDependencies": {
     "cross-env": "^5.2.0",
     "rs-compiler": "^1.2.0"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 5 version",
+    "ie > 8"
+  ]
 }
