--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-loadable": "^5.5.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "slcss": "^1.2.2"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
-    "rs-compiler": "^1.2.0"
+    "rs-compiler": "^1.2.2"
   },
   "browserslist": [
     "> 1%",
