--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^16.8.6",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^4.3.1",
-    "slcss": "^1.2.2"
+    "slcss": "^1.2.4",
+    "reg-rules": "^1.0.0"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
